desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
/*
 Licensed to Cloudera, Inc. under one
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
 regarding copyright ownership.  Cloudera, Inc. licenses this file
 to you under the Apache License, Version 2.0 (the
 "License"); you may not use this file except in compliance
 with the License.  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
*/

.container-fluid {
  border: none;
  margin-left: 0;
  margin-right: 0;
  padding-top: 0;
}

.navbar .navbar-inner {
  padding-right: 24px;

  ul.nav li {
    margin-right: 10px;
    line-height: 19px;
  }

  ul.nav li a:hover {
    background-color: transparent;
  }
}

.dropdown-submenu:hover > a,
.dropdown-submenu:focus > a {
  background-image: none !important;
  background-color: @cui-blue-500;

  > i {
    color: @cui-white !important;
  }

  > svg {
    fill: @cui-white !important;
  }
}

.modal {
  width: 620px;
  margin-left: -310px;
}

.btn:focus {
  outline: none;
}

.modal-footer .btn {
  min-width: 0;
}

.nav-tabs > li > a {
  border-bottom-width: 2px!important;
}

.form-inline label, .form-horizontal label, .form-vertical label, .form-inline .control-label, .form-horizontal .control-label, .form-vertical .control-label {
  font-weight: normal!important;
}

